<resources>
    <string name="app_name" translatable="false">ECom</string>

    <string name="please_check_your_internet" translatable="false">Please check your internet connection!</string>
    <string name="something_went_wrong" translatable="false">Something went wrong</string>
    <string name="server_error" translatable="false">Server error</string>

    <string name="login">Login</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>

    <string name="loading">Loading…</string>

    <string name="arabic">عربي</string>
    <string name="english">English</string>

    <string name="en">En</string>
    <string name="ar">عر</string>

    <string name="please_enter_mobile_number">Please enter your mobile number</string>
    <string name="please_enter_password">Please enter your password</string>
    <string name="login_success">Login Successful</string>

    <string name="price_with_currency_string" translatable="false">₹%s</string>
    <string name="price_with_currency" translatable="false">₹%.0f</string>
</resources>