<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.login.LoginFragment">

    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.whytecreations.ecom.ui.main.login.LoginViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/layout_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_200">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="@{() -> viewModel.onClickEnglish()}"
            android:background="@drawable/oval_language_selected_bg"
            android:text="@string/en"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            android:onClick="@{() -> viewModel.onClickArabic()}"
            android:background="@drawable/oval_language_unselected_bg"
            android:text="@string/ar"
            android:textColor="@color/black" />

        <LinearLayout
            android:id="@+id/logo_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="120dp"
            android:gravity="center_horizontal"
            android:layoutAnimation="@anim/layout_anim_zoom_in"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/oval_red_bg"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:paddingStart="2dp"
                    android:paddingEnd="8dp"
                    android:src="@drawable/ic_shopping_cart"
                    app:tint="@color/white"
                    tools:ignore="ContentDescription" />
            </FrameLayout>

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/leckerli_one_regular"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="28sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_input_field"
            android:layout_below="@id/logo_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="80dp"
            android:layoutAnimation="@anim/layout_anim_slide_left"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="16dp"
                app:hintEnabled="false">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_phone_24dp"
                    android:drawablePadding="22dp"
                    android:hint="@string/phone"
                    android:textAlignment="viewStart"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:paddingStart="16dp"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/black"
                    android:background="@drawable/bg_edit_text"
                    android:textColorHint="@color/colorTextHint"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="16dp"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit_text"
                    android:drawableStart="@drawable/ic_lock_24dp"
                    android:drawablePadding="20dp"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"
                    android:hint="@string/password"
                    android:textAlignment="viewStart"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorTextHint"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_below="@+id/layout_input_field"
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="12dp"
            android:onClick="@{() -> viewModel.onClickLogin()}"
            android:background="@drawable/selector_button_gradient"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </RelativeLayout>
</layout>
